--- a/lab-5-student.qmd
+++ b/lab-5-student.qmd
@@ -109,7 +109,7 @@ interview |>
 
 ```
 ```{r}
-#| label: gym-investigation
+#| label: witness-hints
 
 # I heard a gunshot and then saw a man run out. He had a "Get Fit Now Gym" bag. The membership number on the bag started with "48Z". Only gold members have those bags. The man got into a car with a plate that included "H42W".
 
@@ -146,13 +146,32 @@ get_fit_now_member |>
 ```
 
 ```{r}
+#| label: Jeremy-Bowers
+
 interview |> 
   filter(person_id == "67318")
 ```
 ```{r}
 # I was hired by a woman with a lot of money. I don't know her name but I know she's around 5'5" (65") or 5'7" (67"). She has red hair and she drives a Tesla Model S. I know that she attended the SQL Symphony Concert 3 times in December 2017.
 
-
+drivers_license |> 
+  filter(height %in% c("65","66",
+                        "67"
+                        ),
+         hair_color == "red",
+         car_make == "Tesla", 
+         car_model == "Model S", 
+         gender == "female"
+         ) |>
+  left_join(person,
+            by = c("id" = "license_id"
+                   )
+            )|> 
+ left_join(facebook_event_checkin,
+            by = c("id.y" = "person_id"
+                   )
+           ) |> 
+  filter(event_name == "SQL Symphony Concert")
 
 ```
 
@@ -163,4 +182,4 @@ Hint: Make sure you check for interviews with any suspects!
 
 ## And the final suspect is...
 
-*Put the name of the person responsible for the murder here:*
+*Put the name of the person responsible for the murder here:* Miranda Priestly
